--- a/websocket/package.json
+++ b/websocket/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "express": "^5.2.1",
+    "redis": "^5.10.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
